[package]
name = "solana-trading-sdk"
version = "1.0.5"
edition = "2021"
authors = ["vFight <vfight@hotmail.com>"]
repository = "https://github.com/LulzFi/solana-trading-sdk"
description = "A Rust SDK for trading on Solana"
license = "MIT"
keywords = ["solana", "memecoins", "pumpfun", "trading", "sdk"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "2.0.5"
solana-client = "2.0.5"
solana-program = "2.0.5"
solana-transaction-status = "2.0.5"
solana-account-decoder = "2.0.5"

spl-token = "8.0.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"
mpl-token-metadata = "5.1.0"

borsh = { version = "1.5.1", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
rand = "0.9.0"
bincode = "1.3.3"
anyhow = "1.0.90"
reqwest = { version = "0.12.12", features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"] }
once_cell = "1.13.1"
async-trait = "0.1.86"
base64 = "0.22.1"
